Fix CSS
-  The button and text box were not vertically aligned
-  The tweet streams were not aligned without content

--- a/src/routes/TwitterSearchStream/containers/Streams/style.scss
+++ b/src/routes/TwitterSearchStream/containers/Streams/style.scss
@@ -13,6 +13,7 @@
     height: 95%;
     min-height: 95%;
     display: inline-block;
+    vertical-align: top;
     list-style-type: none;
     padding: 0;
     margin-right: 20px;
